fixed some files

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 #--------------------------------------------------------------------
 
- CI_ENVIRONMENT = development
+ CI_ENVIRONMENT = production
 
 #--------------------------------------------------------------------
 
