--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 #--------------------------------------------------------------------
 
- CI_ENVIRONMENT = production
+ CI_ENVIRONMENT = development
 
 #--------------------------------------------------------------------
 
